# my-browser

./: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  Login.tsx  Logout.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/component/: BookmarkButton.tsx  BookmarkGrid.tsx  BookmarkGridBookmark.tsx  BookmarkGridFolder.tsx  ErrorUi.tsx  TextInput.tsx
src/lib/: bookmark.ts  env.ts  folder.ts  supabase.ts  tauri.ts  url.ts  user.ts
src/lib/supabase/: client.ts  query.ts
src/page/: BookmarkAdd.tsx  FolderAdd.tsx  Home.tsx  Login.tsx  Logout.tsx
