[package]
name = "my-browser"
version = "0.1.0"
description = "My Secure Browser"
authors = []
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-http = { version = "2.5.6", features = ["default"] }
tauri-plugin-opener = "2.5.3"
serde_json = "1.0.149"

